; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/libwebp/src/mux/extr_muxinternal.c_SearchImageToGetOrDelete.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/libwebp/src/mux/extr_muxinternal.c_SearchImageToGetOrDelete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_6__* }

@WEBP_CHUNK_NIL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_6__**, i64, %struct.TYPE_6__***)* @SearchImageToGetOrDelete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @SearchImageToGetOrDelete(%struct.TYPE_6__** %0, i64 %1, %struct.TYPE_6__*** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_6__**, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.TYPE_6__***, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.TYPE_6__*, align 8
  store %struct.TYPE_6__** %0, %struct.TYPE_6__*** %5, align 8
  store i64 %1, i64* %6, align 8
  store %struct.TYPE_6__*** %2, %struct.TYPE_6__**** %7, align 8
  store i64 0, i64* %8, align 8
  %10 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %5, align 8
  %11 = call i32 @assert(%struct.TYPE_6__** %10)
  %12 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %5, align 8
  %13 = load %struct.TYPE_6__***, %struct.TYPE_6__**** %7, align 8
  store %struct.TYPE_6__** %12, %struct.TYPE_6__*** %13, align 8
  %14 = load i64, i64* %6, align 8
  %15 = icmp eq i64 %14, 0
  br i1 %15, label %16, label %25

16:                                               ; preds = %3
  %17 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %5, align 8
  %18 = load %struct.TYPE_6__*, %struct.TYPE_6__** %17, align 8
  %19 = load i32, i32* @WEBP_CHUNK_NIL, align 4
  %20 = call i64 @MuxImageCount(%struct.TYPE_6__* %18, i32 %19)
  store i64 %20, i64* %6, align 8
  %21 = load i64, i64* %6, align 8
  %22 = icmp eq i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %16
  store i32 0, i32* %4, align 4
  br label %45

24:                                               ; preds = %16
  br label %25

25:                                               ; preds = %24, %3
  br label %26

26:                                               ; preds = %39, %25
  %27 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %5, align 8
  %28 = load %struct.TYPE_6__*, %struct.TYPE_6__** %27, align 8
  %29 = icmp ne %struct.TYPE_6__* %28, null
  br i1 %29, label %30, label %44

30:                                               ; preds = %26
  %31 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %5, align 8
  %32 = load %struct.TYPE_6__*, %struct.TYPE_6__** %31, align 8
  store %struct.TYPE_6__* %32, %struct.TYPE_6__** %9, align 8
  %33 = load i64, i64* %8, align 8
  %34 = add nsw i64 %33, 1
  store i64 %34, i64* %8, align 8
  %35 = load i64, i64* %8, align 8
  %36 = load i64, i64* %6, align 8
  %37 = icmp eq i64 %35, %36
  br i1 %37, label %38, label %39

38:                                               ; preds = %30
  store i32 1, i32* %4, align 4
  br label %45

39:                                               ; preds = %30
  %40 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %41 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %40, i32 0, i32 0
  store %struct.TYPE_6__** %41, %struct.TYPE_6__*** %5, align 8
  %42 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %5, align 8
  %43 = load %struct.TYPE_6__***, %struct.TYPE_6__**** %7, align 8
  store %struct.TYPE_6__** %42, %struct.TYPE_6__*** %43, align 8
  br label %26

44:                                               ; preds = %26
  store i32 0, i32* %4, align 4
  br label %45

45:                                               ; preds = %44, %38, %23
  %46 = load i32, i32* %4, align 4
  ret i32 %46
}

declare dso_local i32 @assert(%struct.TYPE_6__**) #1

declare dso_local i64 @MuxImageCount(%struct.TYPE_6__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
